--- a/index.html
+++ b/index.html
@@ -295,17 +295,14 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>我感觉我可能有点水土不服</p>
-                <p>这几天晚上都没睡好</p>
-                <p>很难入睡</p>
-                <p>一闭眼就好多奇奇怪怪的念头</p>
-                <p>最近又是肚脐流血</p>
-                <p>现在又是牙龈肿</p>
-                <p>不知道是上火还是咋</p>
-                <p>身体也不得劲</p>
+                <p>课都抢完了</p>
+                <p>基本都抢到了 开心</p>
+                <p>明天是一个特殊的日子</p>
+                <p>喜乐有分享</p>
+                <p>共度日月长</p>
                 <p>想你</p>
                 <p>爱你</p>
-                <p>365+364=？：<span class="love-days" id="loveDays">0</span> 天</p>
+                <p>365+365=？：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
 
@@ -328,6 +325,7 @@
     </script>
 </body>
 </html>
+
 
 
 
