--- a/index.html
+++ b/index.html
@@ -295,11 +295,7 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>课都抢完了</p>
-                <p>基本都抢到了 开心</p>
-                <p>明天是一个特殊的日子</p>
-                <p>喜乐有分享</p>
-                <p>共度日月长</p>
+                <p>见邮件</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>365+365=？：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -325,6 +321,7 @@
     </script>
 </body>
 </html>
+
 
 
 
