--- a/index.html
+++ b/index.html
@@ -295,7 +295,8 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>见邮件</p>
+                <p>二周年的第一天</p>
+                <p>我们决定都不更新</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>365+365=？：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -321,6 +322,7 @@
     </script>
 </body>
 </html>
+
 
 
 
