--- a/index.html
+++ b/index.html
@@ -295,8 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>二周年的第一天</p>
-                <p>我们决定都不更新</p>
+                <p>燃尽了</p>
+                <p>突然什么都写不出来了</p>
+                <p>难得宝宝今天更新的比我还早</p>
+                <p>写的还很好</p>
+                <p>合理怀疑我的灵感转移了</p>
+                <p>想不出想不出</p>
+                <p>千言万语总结就是</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>365+365=？：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -322,6 +327,7 @@
     </script>
 </body>
 </html>
+
 
 
 
