--- a/index.html
+++ b/index.html
@@ -295,13 +295,16 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>燃尽了</p>
-                <p>突然什么都写不出来了</p>
-                <p>难得宝宝今天更新的比我还早</p>
-                <p>写的还很好</p>
-                <p>合理怀疑我的灵感转移了</p>
-                <p>想不出想不出</p>
-                <p>千言万语总结就是</p>
+                <p>好累呀</p>
+                <p>今天就上了两门课</p>
+                <p>上午的课认真听讲了</p>
+                <p>老师讲的真的很好</p>
+                <p>大家的学习氛围也很丰富</p>
+                <p>这边的环境确实不一样</p>
+                <p>或许有同学没在听课</p>
+                <p>但都在学习工作</p>
+                <p>加油宝宝</p>
+                <p>果壳等你</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>365+365=？：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -327,6 +330,7 @@
     </script>
 </body>
 </html>
+
 
 
 
