--- a/index.html
+++ b/index.html
@@ -295,19 +295,17 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>好累呀</p>
-                <p>今天就上了两门课</p>
-                <p>上午的课认真听讲了</p>
-                <p>老师讲的真的很好</p>
-                <p>大家的学习氛围也很丰富</p>
-                <p>这边的环境确实不一样</p>
-                <p>或许有同学没在听课</p>
-                <p>但都在学习工作</p>
-                <p>加油宝宝</p>
-                <p>果壳等你</p>
+                <p>我感觉有点孤单了qwq</p>
+                <p>宝宝</p>
+                <p>长这么大第一次有这样的感觉</p>
+                <p>你在我身边就好了</p>
+                <p>唉</p>
+                <p>我们可以一起建身</p>
+                <p>一起吃饭</p>
+                <p>一起干任何事</p>
                 <p>想你</p>
                 <p>爱你</p>
-                <p>365+365=？：<span class="love-days" id="loveDays">0</span> 天</p>
+                <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
 
@@ -330,6 +328,7 @@
     </script>
 </body>
 </html>
+
 
 
 
