--- a/index.html
+++ b/index.html
@@ -295,14 +295,17 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>我感觉有点孤单了qwq</p>
-                <p>宝宝</p>
-                <p>长这么大第一次有这样的感觉</p>
-                <p>你在我身边就好了</p>
-                <p>唉</p>
-                <p>我们可以一起建身</p>
-                <p>一起吃饭</p>
-                <p>一起干任何事</p>
+                <p>今天啊</p>
+                <p>我只上了一节课</p>
+                <p>明天没有课</p>
+                <p>这一周上三休四</p>
+                <p>很悠闲，但这三天的几节课让我就筋疲力尽了</p>
+                <p>我好像真的是低能量</p>
+                <p>一节课我能认认真真的听讲</p>
+                <p>到第三节的时候我就受不住了</p>
+                <p>也只有和我的宝宝在一起的时候</p>
+                <p>才能专注736天吧</p>
+                <p>直到一辈子</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -328,6 +331,7 @@
     </script>
 </body>
 </html>
+
 
 
 
