--- a/index.html
+++ b/index.html
@@ -295,17 +295,23 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天啊</p>
-                <p>我只上了一节课</p>
-                <p>明天没有课</p>
-                <p>这一周上三休四</p>
-                <p>很悠闲，但这三天的几节课让我就筋疲力尽了</p>
-                <p>我好像真的是低能量</p>
-                <p>一节课我能认认真真的听讲</p>
-                <p>到第三节的时候我就受不住了</p>
-                <p>也只有和我的宝宝在一起的时候</p>
-                <p>才能专注736天吧</p>
-                <p>直到一辈子</p>
+                <p>明天上午要去听一个讲座</p>
+                <p>下午要补一节国庆的课</p>
+                <p>晚上在健完身回宿舍路上</p>
+                <p>路过大礼堂</p>
+                <p>听到了熟悉的旋律</p>
+                <p>不是悠扬的</p>
+                <p>不是安静的</p>
+                <p>是摇滚，是架子鼓电吉他</p>
+                <p>我循声前往礼堂三楼</p>
+                <p>是一件小教室</p>
+                <p>我往里望去</p>
+                <p>是社团活动，是livehouse</p>
+                <p>我震惊了，在小小的一个30平的教室里</p>
+                <p>观众挤满了教室</p>
+                <p>我看到了自由、青春、野性、叛逆</p>
+                <p>一切在此具象化，他们圆了我对大学的梦和幻想</p>
+                <p>叛逆在这里不是贬义</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -331,6 +337,7 @@
     </script>
 </body>
 </html>
+
 
 
 
