--- a/index.html
+++ b/index.html
@@ -295,23 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>明天上午要去听一个讲座</p>
-                <p>下午要补一节国庆的课</p>
-                <p>晚上在健完身回宿舍路上</p>
-                <p>路过大礼堂</p>
-                <p>听到了熟悉的旋律</p>
-                <p>不是悠扬的</p>
-                <p>不是安静的</p>
-                <p>是摇滚，是架子鼓电吉他</p>
-                <p>我循声前往礼堂三楼</p>
-                <p>是一件小教室</p>
-                <p>我往里望去</p>
-                <p>是社团活动，是livehouse</p>
-                <p>我震惊了，在小小的一个30平的教室里</p>
-                <p>观众挤满了教室</p>
-                <p>我看到了自由、青春、野性、叛逆</p>
-                <p>一切在此具象化，他们圆了我对大学的梦和幻想</p>
-                <p>叛逆在这里不是贬义</p>
+                <p>最近又越睡越晚</p>
+                <p>在适应了一个地方后我就会这样</p>
+                <p>真奇怪</p>
+                <p>初到一个地方的时候反而会睡很早</p>
+                <p>在你身边的时候也是</p>
+                <p>每晚都和第一次见面一般</p>
+                <p>热烈</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -337,6 +327,7 @@
     </script>
 </body>
 </html>
+
 
 
 
