--- a/index.html
+++ b/index.html
@@ -295,13 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>最近又越睡越晚</p>
-                <p>在适应了一个地方后我就会这样</p>
-                <p>真奇怪</p>
-                <p>初到一个地方的时候反而会睡很早</p>
-                <p>在你身边的时候也是</p>
-                <p>每晚都和第一次见面一般</p>
-                <p>热烈</p>
+                <p>宝宝，我和你道歉</p>
+                <p>对不起</p>
+                <p>在我这里</p>
+                <p>想哭就哭</p>
+                <p>想笑就笑</p>
+                <p>我都在</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -327,6 +326,7 @@
     </script>
 </body>
 </html>
+
 
 
 
