--- a/index.html
+++ b/index.html
@@ -295,12 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>宝宝，我和你道歉</p>
-                <p>对不起</p>
-                <p>在我这里</p>
-                <p>想哭就哭</p>
-                <p>想笑就笑</p>
-                <p>我都在</p>
+                <p>今天是一个新的网址啦</p>
+                <p>转移阵地</p>
+                <p>新的秘密基地！</p>
+                <p>云南的云腿月饼真的好好吃</p>
+                <p>还有鲜花饼，这个牌子很不错</p>
+                <p>下次我要带给你尝尝</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -326,6 +326,7 @@
     </script>
 </body>
 </html>
+
 
 
 
