--- a/index.html
+++ b/index.html
@@ -295,13 +295,14 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>我已经连续11天背单词了</p>
-                <p>每日600个</p>
-                <p>6600个！</p>
-                <p>我真是太厉害了</p>
-                <p>坚持坚持</p>
-                <p>我是最厉害的</p>
-                <p>你也是</p>
+                <p>今天团建啦</p>
+                <p>几个舍友都很好</p>
+                <p>非常不错</p>
+                <p>我的宝宝今天也完成考研报名了</p>
+                <p>我问了他们</p>
+                <p>他们都说北植的分比昆植低</p>
+                <p>你一定可以的宝宝</p>
+                <p>加油加油</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -327,6 +328,7 @@
     </script>
 </body>
 </html>
+
 
 
 
