--- a/index.html
+++ b/index.html
@@ -295,14 +295,14 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天团建啦</p>
-                <p>几个舍友都很好</p>
-                <p>非常不错</p>
-                <p>我的宝宝今天也完成考研报名了</p>
-                <p>我问了他们</p>
-                <p>他们都说北植的分比昆植低</p>
-                <p>你一定可以的宝宝</p>
-                <p>加油加油</p>
+                <p>昨天我俩都没更新</p>
+                <p>给网站也放了一个国庆假期</p>
+                <p>我越来越想你了</p>
+                <p>最近想你的原因是</p>
+                <p>一想起我们触碰的感觉</p>
+                <p>拥抱、牵手、散步</p>
+                <p>曾经平常的事情</p>
+                <p>现在暂时都无法实现了</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -328,6 +328,7 @@
     </script>
 </body>
 </html>
+
 
 
 
