--- a/index.html
+++ b/index.html
@@ -295,14 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>昨天我俩都没更新</p>
-                <p>给网站也放了一个国庆假期</p>
-                <p>我越来越想你了</p>
-                <p>最近想你的原因是</p>
-                <p>一想起我们触碰的感觉</p>
-                <p>拥抱、牵手、散步</p>
-                <p>曾经平常的事情</p>
-                <p>现在暂时都无法实现了</p>
+                <p>今天啊</p>
+                <p>又是12点醒来</p>
+                <p>看了一天的电视剧</p>
+                <p>背了单词</p>
+                <p>看了小说</p>
+                <p>吃饭睡觉</p>
+                <p>平常的一个假期中的一天</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -328,6 +327,7 @@
     </script>
 </body>
 </html>
+
 
 
 
