--- a/index.html
+++ b/index.html
@@ -295,13 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天啊</p>
-                <p>又是12点醒来</p>
-                <p>看了一天的电视剧</p>
-                <p>背了单词</p>
-                <p>看了小说</p>
-                <p>吃饭睡觉</p>
-                <p>平常的一个假期中的一天</p>
+                <p>感谢来自老婆的投喂</p>
+                <p>胖胖猪在此</p>
+                <p>我现在有一箱辣条</p>
+                <p>一箱脆升升</p>
+                <p>还有一箱薯片</p>
+                <p>能安稳的度过冬天了</p>
+                <p>嘿嘿</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -327,6 +327,7 @@
     </script>
 </body>
 </html>
+
 
 
 
