--- a/index.html
+++ b/index.html
@@ -295,13 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>感谢来自老婆的投喂</p>
-                <p>胖胖猪在此</p>
-                <p>我现在有一箱辣条</p>
-                <p>一箱脆升升</p>
-                <p>还有一箱薯片</p>
-                <p>能安稳的度过冬天了</p>
-                <p>嘿嘿</p>
+                <p>已经两天没有洗澡</p>
+                <p>但我无法忍受我的臭脚</p>
+                <p>于是我把脚丫子翘到洗漱台上</p>
+                <p>用冰冷的自来水和沐浴露</p>
+                <p>洗香香</p>
+                <p>离谱的体验</p>
+                <p>要是我们有自己的家就好了</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -327,6 +327,7 @@
     </script>
 </body>
 </html>
+
 
 
 
