--- a/index.html
+++ b/index.html
@@ -295,13 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>已经两天没有洗澡</p>
-                <p>但我无法忍受我的臭脚</p>
-                <p>于是我把脚丫子翘到洗漱台上</p>
-                <p>用冰冷的自来水和沐浴露</p>
-                <p>洗香香</p>
-                <p>离谱的体验</p>
-                <p>要是我们有自己的家就好了</p>
+                <p>七天假期</p>
+                <p>我有好几次想去找你</p>
+                <p>我的爱人</p>
+                <p>以后的国庆</p>
+                <p>我们要好好地在一起</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -327,6 +325,7 @@
     </script>
 </body>
 </html>
+
 
 
 
