--- a/index.html
+++ b/index.html
@@ -295,11 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>七天假期</p>
-                <p>我有好几次想去找你</p>
-                <p>我的爱人</p>
-                <p>以后的国庆</p>
-                <p>我们要好好地在一起</p>
+                <p>今天下了一天的雨</p>
+                <p>这是我在北方的第一场秋雨雨</p>
+                <p>淅淅沥沥</p>
+                <p>温柔而绵长</p>
+                <p>适合爱人抱在一起睡觉</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -325,6 +325,7 @@
     </script>
 </body>
 </html>
+
 
 
 
