--- a/index.html
+++ b/index.html
@@ -295,11 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>赵瑾小姐</p>
-                <p>抢占先机</p>
-                <p>快我一步</p>
-                <p>完成更新</p>
-                <p>补更</p>
+                <p>昨天睡得很难受</p>
+                <p>再也不想熬夜了</p>
+                <p>但是晚上又总是很难早睡</p>
+                <p>要是你在我身边</p>
+                <p>我肯定能秒睡</p>
+                <p>需要运动</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -325,6 +326,7 @@
     </script>
 </body>
 </html>
+
 
 
 
