--- a/index.html
+++ b/index.html
@@ -295,12 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>最近腰好多了</p>
-                <p>要点就是</p>
-                <p>坐姿端正</p>
-                <p>一定要坐到坐骨上</p>
-                <p>还有就是不能翘二郎腿</p>
-                <p>谨记</p>
+                <p>今天认识了好多菌</p>
+                <p>又是酣畅淋漓的学术讨论的一天</p>
+                <p>鬼伞田头菇滑锈伞白参</p>
+                <p>还学习了一下CRASPR-CAS9</p>
+                <p>晚上练了上半身</p>
+                <p>充实的一天</p>
+                <p>开学的第一个月</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -326,6 +327,7 @@
     </script>
 </body>
 </html>
+
 
 
 
