--- a/index.html
+++ b/index.html
@@ -295,13 +295,15 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天认识了好多菌</p>
-                <p>又是酣畅淋漓的学术讨论的一天</p>
-                <p>鬼伞田头菇滑锈伞白参</p>
-                <p>还学习了一下CRASPR-CAS9</p>
-                <p>晚上练了上半身</p>
-                <p>充实的一天</p>
-                <p>开学的第一个月</p>
+                <p>北方真的冷的好快</p>
+                <p>南方还是29°的时候</p>
+                <p>这里就只有9°的零头了</p>
+                <p>北风呼呼</p>
+                <p>我撑着绿色圆点的小伞</p>
+                <p>走在秋雨中</p>
+                <p>感受着湿冷的空气</p>
+                <p>像在南方一样</p>
+                <p>我们一起漫步</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -327,6 +329,7 @@
     </script>
 </body>
 </html>
+
 
 
 
