--- a/index.html
+++ b/index.html
@@ -295,15 +295,15 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>北方真的冷的好快</p>
-                <p>南方还是29°的时候</p>
-                <p>这里就只有9°的零头了</p>
-                <p>北风呼呼</p>
-                <p>我撑着绿色圆点的小伞</p>
-                <p>走在秋雨中</p>
-                <p>感受着湿冷的空气</p>
-                <p>像在南方一样</p>
-                <p>我们一起漫步</p>
+                <p>突然有感</p>
+                <p>因为桌子有些歪了</p>
+                <p>调正之后就和地砖上的线平行</p>
+                <p>我更喜欢平行的样子</p>
+                <p>感觉比交叉更有美感</p>
+                <p>在人生的这条线上</p>
+                <p>我们会在同样的方向上走下去</p>
+                <p>像两条平行线</p>
+                <p>永远同频</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -329,6 +329,7 @@
     </script>
 </body>
 </html>
+
 
 
 
