--- a/index.html
+++ b/index.html
@@ -295,15 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>突然有感</p>
-                <p>因为桌子有些歪了</p>
-                <p>调正之后就和地砖上的线平行</p>
-                <p>我更喜欢平行的样子</p>
-                <p>感觉比交叉更有美感</p>
-                <p>在人生的这条线上</p>
-                <p>我们会在同样的方向上走下去</p>
-                <p>像两条平行线</p>
-                <p>永远同频</p>
+                <p>明天是宝宝的休息日</p>
+                <p>好好休息一下</p>
+                <p>放松享受按摩</p>
+                <p>看看身边的变化</p>
+                <p>回顾这段时间</p>
+                <p>放平心态</p>
+                <p>调整向前</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -329,6 +327,7 @@
     </script>
 </body>
 </html>
+
 
 
 
