--- a/index.html
+++ b/index.html
@@ -295,13 +295,10 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>明天是宝宝的休息日</p>
-                <p>好好休息一下</p>
-                <p>放松享受按摩</p>
-                <p>看看身边的变化</p>
-                <p>回顾这段时间</p>
-                <p>放平心态</p>
-                <p>调整向前</p>
+                <p>早上好宝宝</p>
+                <p>新的一天</p>
+                <p>要继续好好努力</p>
+                <p>加油！</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -327,6 +324,7 @@
     </script>
 </body>
 </html>
+
 
 
 
