--- a/index.html
+++ b/index.html
@@ -295,10 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>果然要上课才能感受到周末的快乐</p>
-                <p>开心</p>
-                <p>明天就是周末了</p>
-                <p>爽歪歪</p>
+                <p>我思考着</p>
+                <p>爱是什么</p>
+                <p>你就是我的爱呀</p>
+                <p>赵瑾！赵瑾！！</p>
+                <p>瑾就是我的love</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -324,6 +325,7 @@
     </script>
 </body>
 </html>
+
 
 
 
