--- a/index.html
+++ b/index.html
@@ -295,12 +295,8 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>我们有好多好多故事</p>
-                <p>每一张照片</p>
-                <p>一份回忆</p>
-                <p>等我们老了</p>
-                <p>有一天</p>
-                <p>我们抱着我们的照片，讲着我们的故事</p>
+                <p>希望老婆懒得看</p>
+                <p>因为今天是水的一天</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -326,6 +322,7 @@
     </script>
 </body>
 </html>
+
 
 
 
