--- a/index.html
+++ b/index.html
@@ -295,8 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>希望老婆懒得看</p>
-                <p>因为今天是水的一天</p>
+                <p>北京的冬天真冷啊</p>
+                <p>哦不，是秋天</p>
+                <p>初雪一定很美吧</p>
+                <p>想不到到时的心情</p>
+                <p>明天羽绒服就到了</p>
+                <p>不知道暖不暖和呢</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -322,6 +326,7 @@
     </script>
 </body>
 </html>
+
 
 
 
