--- a/index.html
+++ b/index.html
@@ -295,17 +295,10 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>有时候睡觉起来</p>
-                <p>会有一种恍若隔世的感受</p>
-                <p>特别是在专注的持续做某一件事的时期</p>
-                <p>我想或许是因为在这段时间里</p>
-                <p>你的生活就只剩这一件事了</p>
-                <p>你心心念念，睁眼就是他</p>
-                <p>可心底却还有其他爱的人，想做的事</p>
-                <p>这时就会有割裂感</p>
-                <p>与此时此刻的现实的陌生感</p>
-                <p>有这样的矛盾</p>
-                <p>说明你深深的心里的我</p>
+                <p>明天要是起得早</p>
+                <p>我要用泡面碗</p>
+                <p>泡一碗白象面</p>
+                <p>尝尝幸福的味道</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -331,6 +324,7 @@
     </script>
 </body>
 </html>
+
 
 
 
