--- a/index.html
+++ b/index.html
@@ -295,10 +295,9 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>明天要是起得早</p>
-                <p>我要用泡面碗</p>
-                <p>泡一碗白象面</p>
-                <p>尝尝幸福的味道</p>
+                <p>总觉得最近不够自律</p>
+                <p>想改正但又总是改不正</p>
+                <p>我们也好久没视频了</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -324,6 +323,7 @@
     </script>
 </body>
 </html>
+
 
 
 
