--- a/index.html
+++ b/index.html
@@ -295,9 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>总觉得最近不够自律</p>
-                <p>想改正但又总是改不正</p>
-                <p>我们也好久没视频了</p>
+                <p>明天又是新的一周</p>
+                <p>要开始自律了</p>
+                <p>我计划明天把汇报ppt讲完</p>
+                <p>下周我还准备和导师那边联系</p>
+                <p>找点活干</p>
+                <p>一起努力！！</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -323,6 +326,7 @@
     </script>
 </body>
 </html>
+
 
 
 
