--- a/index.html
+++ b/index.html
@@ -295,10 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>充实的一天呀！</p>
-                <p>耐着性子把文献大致读完了</p>
-                <p>学到了好多知识</p>
-                <p>明天要继续努力</p>
+                <p>嘻嘻</p>
+                <p>这是一条补更</p>
+                <p>昨天没有更新</p>
+                <p>偷偷偷了个懒</p>
+                <p>宝宝没有发现</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -324,6 +325,7 @@
     </script>
 </body>
 </html>
+
 
 
 
