--- a/index.html
+++ b/index.html
@@ -295,11 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今日完成了周五汇报的ppt和讲稿</p>
-                <p>明天只有一节课</p>
-                <p>我要好好准备和熟悉</p>
-                <p>要讲15分钟呢</p>
-                <p>紧张</p>
+                <p>就这样爱你爱你爱你</p>
+                <p>爱你爱你爱你</p>
+                <p>爱你爱你爱你</p>
+                <p>爱你爱你爱你</p>
+                <p>爱你爱你爱你</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -325,6 +325,7 @@
     </script>
 </body>
 </html>
+
 
 
 
