--- a/index.html
+++ b/index.html
@@ -295,11 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>我养的小盆栽日渐枯萎了</p>
-                <p>到底是为什么qwq</p>
-                <p>买的时候我就有心理准备</p>
-                <p>可他们还是没活成</p>
-                <p>问题到底出现在哪里。。。</p>
+                <p>银杏黄了一片一片</p>
+                <p>落在黄色的街道</p>
+                <p>北方的秋的颜色</p>
+                <p>可银杏的味道并不好闻</p>
+                <p>北方的秋的味道</p>
+                <p>没有桂花香</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -325,6 +326,7 @@
     </script>
 </body>
 </html>
+
 
 
 
