--- a/index.html
+++ b/index.html
@@ -295,12 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>银杏黄了一片一片</p>
-                <p>落在黄色的街道</p>
-                <p>北方的秋的颜色</p>
-                <p>可银杏的味道并不好闻</p>
-                <p>北方的秋的味道</p>
-                <p>没有桂花香</p>
+                <p>这周为了准备汇报</p>
+                <p>单词都没怎么背</p>
+                <p>明天就是新的一周</p>
+                <p>我要先联系一下组里的老师了</p>
+                <p>然后单词再背起来</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -326,6 +325,7 @@
     </script>
 </body>
 </html>
+
 
 
 
