--- a/index.html
+++ b/index.html
@@ -295,11 +295,9 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>这周为了准备汇报</p>
-                <p>单词都没怎么背</p>
-                <p>明天就是新的一周</p>
-                <p>我要先联系一下组里的老师了</p>
-                <p>然后单词再背起来</p>
+                <p>身上没钱了</p>
+                <p>可是这里没有3.9</p>
+                <p>这里也没有你</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -325,6 +323,7 @@
     </script>
 </body>
 </html>
+
 
 
 
