--- a/index.html
+++ b/index.html
@@ -295,9 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>身上没钱了</p>
-                <p>可是这里没有3.9</p>
-                <p>这里也没有你</p>
+                <p>今日做了什么呢</p>
+                <p>勇敢的走出了那一步</p>
+                <p>感觉生活豁然开朗</p>
+                <p>一切都有了动力</p>
+                <p>有你真好</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -323,6 +325,7 @@
     </script>
 </body>
 </html>
+
 
 
 
