--- a/index.html
+++ b/index.html
@@ -295,10 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>举头望明月</p>
-                <p>低头思小赵</p>
-                <p>又是是一轮明月</p>
-                <p>我们在同一片月光下</p>
+                <p>今天和爸妈打电话</p>
+                <p>他们回老家了</p>
+                <p>村里有重大的祭拜活动</p>
+                <p>我在远方</p>
+                <p>祈愿我们顺顺利利</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -324,6 +325,7 @@
     </script>
 </body>
 </html>
+
 
 
 
