--- a/index.html
+++ b/index.html
@@ -295,11 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天和爸妈打电话</p>
-                <p>他们回老家了</p>
-                <p>村里有重大的祭拜活动</p>
-                <p>我在远方</p>
-                <p>祈愿我们顺顺利利</p>
+                <p>ccd被放在了某个角落</p>
+                <p>无人问津</p>
+                <p>可怜的ccd</p>
+                <p>就当给他放个假吧</p>
+                <p>直到考研结束</p>
+                <p>直到我们再见</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -325,6 +326,7 @@
     </script>
 </body>
 </html>
+
 
 
 
