--- a/index.html
+++ b/index.html
@@ -295,12 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>ccd被放在了某个角落</p>
-                <p>无人问津</p>
-                <p>可怜的ccd</p>
-                <p>就当给他放个假吧</p>
-                <p>直到考研结束</p>
-                <p>直到我们再见</p>
+                <p>举报某人又不更新</p>
+                <p>举报某人又看小说</p>
+                <p>举报某人又不自律</p>
+                <p>哼哼哼</p>
+                <p>今天就是你的休息日</p>
+                <p>下次休息日取消！</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -326,6 +326,7 @@
     </script>
 </body>
 </html>
+
 
 
 
