--- a/index.html
+++ b/index.html
@@ -295,12 +295,9 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>举报某人又不更新</p>
-                <p>举报某人又看小说</p>
-                <p>举报某人又不自律</p>
-                <p>哼哼哼</p>
-                <p>今天就是你的休息日</p>
-                <p>下次休息日取消！</p>
+                <p>我发现这两天我们交流变少了</p>
+                <p>都怪我打游戏</p>
+                <p>明天我们预约好吗</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -326,6 +323,7 @@
     </script>
 </body>
 </html>
+
 
 
 
