--- a/index.html
+++ b/index.html
@@ -295,13 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>我发现这两天我们交流变少了</p>
-                <p>都怪我打游戏</p>
-                <p>明天我们预约好吗</p>
+                <p>今日更新</p>
+                <p>见照片</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
-            </div>
+            </div> 
         </div>
 
         <!-- Love Letter -->
@@ -323,6 +322,7 @@
     </script>
 </body>
 </html>
+
 
 
 
