--- a/index.html
+++ b/index.html
@@ -295,8 +295,8 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今日更新</p>
-                <p>见照片</p>
+                <p>日子一天天的过去</p>
+                <p>分离之苦越来越重</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -322,6 +322,7 @@
     </script>
 </body>
 </html>
+
 
 
 
