--- a/index.html
+++ b/index.html
@@ -295,16 +295,9 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>下午上课是抬头看着窗外</p>
-                <p>风带着落叶在空中滑过</p>
-                <p>一时我愣住了</p>
-                <p>下课回去又发现雾霾散开</p>
-                <p>心底的迷雾也随之而去</p>
-                <p>我喜欢上了这儿的秋天</p>
-                <p>这里有着和南方不一样的景色</p>
-                <p>落叶满地</p>
-                <p>和戴着几篇残叶的枝干</p>
-                <p>是北平的晚秋</p>
+                <p>分不清大小王了！</p>
+                <p>来线下battle</p>
+                <p>战至天明！</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -330,6 +323,7 @@
     </script>
 </body>
 </html>
+
 
 
 
