--- a/index.html
+++ b/index.html
@@ -295,9 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>分不清大小王了！</p>
-                <p>来线下battle</p>
-                <p>战至天明！</p>
+                <p>九个月前</p>
+                <p>创立了这个网站</p>
+                <p>噢！</p>
+                <p>那时是我们的生日</p>
+                <p>我想这是一个很不错的生日礼物</p>
+                <p>到现在，它承载了更多</p>
+                <p>不知你是否喜欢</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -323,6 +327,7 @@
     </script>
 </body>
 </html>
+
 
 
 
