--- a/index.html
+++ b/index.html
@@ -295,13 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>九个月前</p>
-                <p>创立了这个网站</p>
-                <p>噢！</p>
-                <p>那时是我们的生日</p>
-                <p>我想这是一个很不错的生日礼物</p>
-                <p>到现在，它承载了更多</p>
-                <p>不知你是否喜欢</p>
+                <p>今天最低会到-3°</p>
+                <p>当然不是早上</p>
+                <p>不知道会不会下雪呢</p>
+                <p>期待第一次看雪</p>
+                <p>我要在雪地上刻上我们的名字</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -327,6 +325,7 @@
     </script>
 </body>
 </html>
+
 
 
 
