--- a/index.html
+++ b/index.html
@@ -295,11 +295,10 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天最低会到-3°</p>
-                <p>当然不是早上</p>
-                <p>不知道会不会下雪呢</p>
-                <p>期待第一次看雪</p>
-                <p>我要在雪地上刻上我们的名字</p>
+                <p>times fly</p>
+                <p>依稀记得你送我去实习的那天早晨</p>
+                <p>多么希望我们能再现这一幕</p>
+                <p>希望实习一切顺利</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -325,6 +324,7 @@
     </script>
 </body>
 </html>
+
 
 
 
