--- a/index.html
+++ b/index.html
@@ -295,10 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>times fly</p>
-                <p>依稀记得你送我去实习的那天早晨</p>
-                <p>多么希望我们能再现这一幕</p>
-                <p>希望实习一切顺利</p>
+                <p>my dear jin</p>
+                <p>实习第一天</p>
+                <p>例假+住宿+环境</p>
+                <p>感冒+头晕+没热水</p>
+                <p>重重困难</p>
+                <p>我很担心</p>
+                <p>希望宝宝能够平稳度过</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -324,6 +327,7 @@
     </script>
 </body>
 </html>
+
 
 
 
