--- a/index.html
+++ b/index.html
@@ -295,13 +295,8 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>my dear jin</p>
-                <p>实习第一天</p>
-                <p>例假+住宿+环境</p>
-                <p>感冒+头晕+没热水</p>
-                <p>重重困难</p>
-                <p>我很担心</p>
-                <p>希望宝宝能够平稳度过</p>
+                <p>今日休息</p>
+                <p>耶耶耶</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -327,6 +322,7 @@
     </script>
 </body>
 </html>
+
 
 
 
