--- a/index.html
+++ b/index.html
@@ -295,16 +295,10 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>这几天在玩荒野大镖客</p>
-                <p>与其说是玩</p>
-                <p>其实更像一部电影</p>
-                <p>只不过能操控主角</p>
-                <p>讲了1899年美国西部的牛仔故事</p>
-                <p>故事展现了一个时代的落幕</p>
-                <p>迎来的是citizen的时代</p>
-                <p>不知道我们所处的时代</p>
-                <p>或是属于我们的时代</p>
-                <p>何时落幕呢</p>
+                <p>今天一觉睡到了12点</p>
+                <p>3点睡的</p>
+                <p>睡眠越来越不规律</p>
+                <p>需要你在我身边</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -330,6 +324,7 @@
     </script>
 </body>
 </html>
+
 
 
 
