--- a/index.html
+++ b/index.html
@@ -295,10 +295,10 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天一觉睡到了12点</p>
-                <p>3点睡的</p>
-                <p>睡眠越来越不规律</p>
-                <p>需要你在我身边</p>
+                <p>我要做一个大更新了</p>
+                <p>等你考完</p>
+                <p>我们就有一个新的开始</p>
+                <p>期待一下吧</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -324,6 +324,7 @@
     </script>
 </body>
 </html>
+
 
 
 
