--- a/index.html
+++ b/index.html
@@ -295,10 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>我要做一个大更新了</p>
-                <p>等你考完</p>
-                <p>我们就有一个新的开始</p>
-                <p>期待一下吧</p>
+                <p>不知道宝宝对大更新有什么想法呢</p>
+                <p>我会在每天的凌晨1-3点进行大更新工程</p>
+                <p>欢迎留言</p>
+                <p>继续期待一下吧</p>
+                <p>by the way</p>
+                <p>今天晚上吃的烧烤还不错</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -324,6 +326,7 @@
     </script>
 </body>
 </html>
+
 
 
 
