--- a/index.html
+++ b/index.html
@@ -295,12 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>不知道宝宝对大更新有什么想法呢</p>
-                <p>我会在每天的凌晨1-3点进行大更新工程</p>
-                <p>欢迎留言</p>
-                <p>继续期待一下吧</p>
-                <p>by the way</p>
-                <p>今天晚上吃的烧烤还不错</p>
+                <p>又回到这个网站了</p>
+                <p>现在回到这里真的感觉很珍贵吧</p>
+                <p>我的宝贝终于考完研了</p>
+                <p>一转眼都快过去一个月</p>
+                <p>马上就要去云南旅游</p>
+                <p>只是我们还是一直无法相见</p>
+                <p>我很想念你</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -326,6 +327,7 @@
     </script>
 </body>
 </html>
+
 
 
 
