--- a/index.html
+++ b/index.html
@@ -295,13 +295,10 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>又回到这个网站了</p>
-                <p>现在回到这里真的感觉很珍贵吧</p>
-                <p>我的宝贝终于考完研了</p>
-                <p>一转眼都快过去一个月</p>
-                <p>马上就要去云南旅游</p>
-                <p>只是我们还是一直无法相见</p>
-                <p>我很想念你</p>
+                <p>昨天忘记更新了</p>
+                <p>好久没更新了总是忘记</p>
+                <p>敷衍也是一门艺术呀</p>
+                <p>嘻嘻</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -327,6 +324,7 @@
     </script>
 </body>
 </html>
+
 
 
 
